--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,17 @@
-<div class="row">
-    <div class="col-md-6">
-        <h1>Choose a Shape</h1>
-    </div>
-    <div class="col-md-6">
-        <h1>Choose a Shape</h1>
-    </div>
+<div>
+  <h1>Choose a Shape</h1>
+  <br>
+  <h2>Square</h2>
+  <div class="square" ></div>
+
+  <h2>Triangle</h2>
+  <div class="triangle"></div>
+
+  <h2>rectangle</h2>
+  <div class="rectangle"></div>
+
+  <h2>Circle</h2>
+  <div class="circle"></div>
 </div>
+
+
