--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,26 +1,32 @@
 .square {
-  height: 50px;
-  width: 50px;
-  background-color: #555;
+  height: 80px;
+  width: 80px;
+  background-color: red;
 }
 
 .circle {
-  height: 50px;
-  width: 50px;
-  background-color: #555;
+  height: 80px;
+  width: 80px;
+  background-color: #855;
   border-radius: 50%;
 }
 
 .rectangle {
-  height: 50px;
-  width: 100px;
-  background-color: #555;
+  height: 80px;
+  width: 160px;
+  background-color: #505;
 }
 
 .triangle {
   width: 0;
   height: 0;
-  border-left: 25px solid transparent;
-  border-right: 25px solid transparent;
-  border-bottom: 50px solid #555;
+  border-left: 40px solid transparent;
+  border-right: 40px solid transparent;
+  border-bottom: 80px solid blue;
 }
+
+.vl {
+  border-left: 4px solid cornflowerblue;
+  height: 38px;
+}
+
